Fix for logo resize
The log was resizing too small for mobile.

--- a/structure/css/theme_extra.css
+++ b/structure/css/theme_extra.css
@@ -1609,6 +1609,7 @@ code {
   
   .header .nav-logo a img {
     height: 28px !important;
+    max-width: none;
   }
   
   .header .main-nav {
